--- a/poc.ipynb
+++ b/poc.ipynb
@@ -88,7 +88,9 @@
    "source": [
     "from FActScore.factscore.factscorer import FactScorer\n",
     "from huggingface_hub import login\n",
-    "HF_key = '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'\n",
+    "HF_key_path = \"my_HF_key.txt\"\n",
+    "with open(HF_key_path, 'r') as f:\n",
+    "    HF_key = f.readline()\n",
     "login(HF_key)"
    ]
   },
